--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <nav class="navbar">
       <div class="logo">
-        <img src="./img/rel.png" alt="REL logo" />
+       <a href="#"> <img src="./img/rel.png" alt="REL logo" /> </a>
       </div>
       <div class="links">
           
