--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
       <div class="action"> <button>HIRE ME</button></div>
 
     </nav>
-    <header></header>
+
+
+
+
+    <header class="intro">
+<div class="card"></div>
+<div class=></div>
+<div></div>
+
+    </header>
     <main></main>
   </body>
 </html>
