--- a/index.html
+++ b/index.html
@@ -27,7 +27,22 @@
 
 
     <header class="intro">
-<div class="card"></div>
+<div class="card">
+  <p> <h3>Hi, I am </h3></p>
+  <p> <h1>Awortwe Felix Kwamena</h1></p>
+  <p><h4>A Web Developer</h4> </p>
+  <p> I am a Climate Scientist and an aspiring Software Developer</p> <br>
+    <div>
+          <button class="cv">
+           <a href="#"> Download Cv</a>
+          </button>
+          <button class="contact">
+            <a href="#">Contact Me</a>
+          </button>
+
+    </div>
+
+</div>
 <div class=></div>
 <div></div>
 
