--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 
 
     <header class="intro">
-<div class="card">
-  <p> <h3>Hi, I am </h3></p>
-  <p> <h1>Awortwe Felix Kwamena</h1></p>
+<nav class="navcard">
+  <div class="infocard">
+  <p>
+    <h3>Hi, I am </h3></p>
+  <p> <h1 class="mycardname">Awortwe Felix Kwamena</h1></p>
   <p><h4>A Web Developer</h4> </p>
-  <p> I am a Climate Scientist and an aspiring Software Developer</p> <br>
+  <p> I am a Climate Scientist and an aspiring <br> Software Developer</p> <br>
     <div>
           <button class="cv">
            <a href="#"> Download Cv</a>
@@ -39,9 +41,12 @@
           <button class="contact">
             <a href="#">Contact Me</a>
           </button>
-
-    </div>
-
+        </div>
+    </nav>
+    
+</div>
+<div>
+  
 </div>
 <div class=></div>
 <div></div>
