--- a/index.html
+++ b/index.html
@@ -34,7 +34,20 @@
   <p> <h1 class="mycardname">Awortwe Felix Kwamena</h1></p>
   <p><h4>A Web Developer</h4> </p>
   <p> I am a Climate Scientist and an aspiring <br> Software Developer</p> <br>
+    <br>
     <div>
+      <button class="cv">
+       <a href="#"> Download Cv</a>
+      </button>
+      <button class="contact">
+        <a href="#">Contact Me</a>
+      </button>
+<div>
+
+     <div> <img  class="portpic"src="./img/real.svg" alt="a picture"></div>
+    
+    </nav>
+  <!--<div>
           <button class="cv">
            <a href="#"> Download Cv</a>
           </button>
@@ -42,12 +55,10 @@
             <a href="#">Contact Me</a>
           </button>
         </div>
-    </nav>
     
-</div>
-<div>
-  
-</div>
+  -->
+
+
 <div class=></div>
 <div></div>
 
