changed the images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- Hero Section -->
   <section class="hero" id="about">
     <img
-      src="https://media-exp1.licdn.com/dms/image/C4D03AQELPVaWYZVk4Q/profile-displayphoto-shrink_800_800/0/1606950045787?e=1641427200&v=beta&t=wC7iAvYtVJ0IxlcrrxiapMJom-_XKwdvWXuO9qsKKkE"
+      src="assets/images/profile.jpg"
       alt="My Picture" loading="lazy" class="hero-img" />
     <div class="bio animate__animated animate__shakeX shadow">
       <h2 class="bio-title">About Me</h2>
