fixed issue for in about section

--- a/index.html
+++ b/index.html
@@ -5,17 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-
   <!--CSS Styles -->
   <link rel="stylesheet" href="assets/css/styles.css" />
-
-  
   <link rel="logo_V1.png" type="image/png" href="assets/images/logo_V1.png" />
-
   <!-- Animate CSS CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
   <title>Awortwe Felix Kwamena | Python Developer</title>
 </head>
 
@@ -32,17 +26,13 @@
     <button class="burger-menu" id="burger-menu">
       <ion-icon class="bars" name="menu-outline"></ion-icon>
     </button>
-
   </nav>
 
   <!-- Hero Section -->
-  <section class="hero" id="about">
-    <img
-      src="assets/images/profile.jpg"
-      alt="My Picture" loading="lazy" class="hero-img" />
-    <div class="bio animate__animated animate__shakeX shadow">
+  <section class="hero shadow" id="about">
+    <img src="assets/images/profile.jpg" alt="My Picture" loading="lazy" class="hero-img" />
+    <div class="bio  " style="box-shadow: none;">
       <h2 class="bio-title">About Me</h2>
-     
       <p>
         I am a self-taught Python Developer with a passion for learning and
         problem solving.
@@ -120,7 +110,7 @@
       <p>
         i am available for freelance work and open to remote work.
       </p>
-    
+
 
 
     </div>
@@ -130,12 +120,12 @@
   <section class="skills" id="skills">
     <h2 class="skill-header">My Top Skills</h2>
     <div class="skills-wrapper">
-        <img src="assets/icons/html.png" alt="" loading="lazy" class="icon icon-card shadow" />
-        <img src="assets/icons/css.png" alt="" loading="lazy" class="icon icon-card shadow" />
-        <img src="assets/icons/fortran.png" alt="fortran 90 icon" loading="lazy" class="icon icon-card shadow" />
-        <img src="assets/icons/Git-Icon-Black.png" alt="Git icon" loading="lazy" class="icon icon-card shadow" />
-        <img src="assets/icons/python-black.png" alt="Python icon" loading="lazy" class="icon icon-card shadow" />
-        <img src="assets/icons/canva.png" alt="Canva icon" loading="lazy" class="icon icon-card shadow" />
+      <img src="assets/icons/html.png" alt="" loading="lazy" class="icon icon-card shadow" />
+      <img src="assets/icons/css.png" alt="" loading="lazy" class="icon icon-card shadow" />
+      <img src="assets/icons/fortran.png" alt="fortran 90 icon" loading="lazy" class="icon icon-card shadow" />
+      <img src="assets/icons/Git-Icon-Black.png" alt="Git icon" loading="lazy" class="icon icon-card shadow" />
+      <img src="assets/icons/python-black.png" alt="Python icon" loading="lazy" class="icon icon-card shadow" />
+      <img src="assets/icons/canva.png" alt="Canva icon" loading="lazy" class="icon icon-card shadow" />
     </div>
   </section>
 
@@ -158,8 +148,6 @@
         <p class="project-details">
           This is a Desktop app , that is used for taking screenshot on windows.
           This Desktop app was built with Python and can be used easily on windows
-
-
         </p>
         <a href="https://github.com/felaris/Screenshot-with-Python" target="_blank" class="project-link">Check it
           Out</a>
@@ -171,8 +159,6 @@
         <p class="project-details">
           This is my portfolio website , built with Html, CSS and Javascript
           The codes are available on my github for free download and Edit
-
-
         </p>
         <a href="#" target="_blank" class="project-link">Check it Out</a>
       </div>
