--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </li>
         <li>
           <ion-icon name="checkmark-outline"></ion-icon>
-          HTML 5 n CSS
+          HTML 5 and CSS
         </li>
         <li>
           <ion-icon name="checkmark-outline"></ion-icon>
@@ -88,11 +88,11 @@
         </li>
         <li>
           <ion-icon name="checkmark-outline"></ion-icon>
-          Excel
+          Microsoft Excel
         </li>
         <li>
           <ion-icon name="checkmark-outline"></ion-icon>
-          PowerPoint
+          Microsoft PowerPoint
         </li>
         <li>
           <ion-icon name="checkmark-outline"></ion-icon>
