edited the old age poem , removed the scroll up button from the poem.html

--- a/poems.html
+++ b/poems.html
@@ -154,9 +154,8 @@
       <span>Skin that has wrinkles and flesh like the bark of a tree .</span>
       <span>Hair as grey as the ashes </span>
       <span>Nails as weak as lead in fire </span>
-      <span>I can count the veins on her skin</span>
-      <span>And all the capillaries scattered on the surface .</span>
-      <span>The teeth has lost it glory and her smile has lost it comfort </span>
+      <span>I can count the veins on her skin And all the capillaries scattered on the surface</span>
+     <span>The teeth has lost it glory and her smile has lost it comfort </span>
       <span>The fire in her eye is dying </span>
       <span>Her body weight is as light as graphene</span>
       <span>She has lost her friendship with gravity </span>
@@ -180,10 +179,6 @@
  
 
   
-
-  <!-- Scroll to top -->
-  <i class="scroll-up" id="scroll-up"><img src="assets/icons/icons8-upward-arrow.gif" class="socicon up-arrow"
-      alt="scroll up button" /></i>
 
 
   
