--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
   <!--CSS Styles -->
   <link rel="stylesheet" href="assets/css/styles.css" />
 
-  <!-- Favicons -->
-  <!--<link
-      rel="logo"
-      sizes="180x180"
-      href="assets/images/logo_V1.png"
-    />
-     -->
+  
   <link rel="logo_V1.png" type="image/png" href="assets/images/logo_V1.png" />
 
   <!-- Animate CSS CDN -->
@@ -325,7 +319,7 @@
 
   <!-- Scroll to top -->
   <i class="scroll-up" id="scroll-up"><img src="assets/icons/icons8-upward-arrow.gif" class="socicon up-arrow"
-      alt="" /></i>
+      alt="scroll up button" /></i>
 
 
 
