--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           This is my portfolio website , built with Html, CSS and Javascript
           The codes are available on my github for free download and Edit
         </p>
-        <a href="#" target="_blank" class="project-link">Check it Out</a>
+        <a href="https://felixawortwe.herokuapp.com/" target="_blank" class="project-link">Check it Out</a>
       </div>
     </div>
   </section>
